# chord_detector

./: .gitignore  CMakeLists.txt  README.md  chord_detector-config.cmake.in  chord_detector.h  example.cpp  test.cpp
